@@ -3,21 +3,13 @@
 #DO NOT USE COLOR CODES IN THE JSON KEYS
 #COLORS ARE DEFINED IN advanced.yml IF YOU WISH TO CHANGE THEM
 JSON.Rank=Rank
-JSON.RankPossesive=of
 JSON.DescriptionHeader=Description
 JSON.JWrapper.Header=Details
-JSON.JWrapper.Activation=Activation:
-JSON.JWrapper.Activation.Type.RightClick=Right Click
 JSON.Type.Passive=Passive
 JSON.Type.Active=Active
 JSON.Type.SuperAbility=Super Ability
-JSON.SuperAbility.Charges=Charges
-JSON.SuperAbility.Duration=Duration
 JSON.Locked=-=[LOCKED]=-
 JSON.LevelRequirement=Level Requirement
-JSON.JWrapper.Random.ActivationChance=Activation Chance:
-JSON.JWrapper.Random.MaxChance=Max Bonus:
-JSON.JWrapper.Duration=Duration:
 JSON.JWrapper.Target.Type=Target Type:
 JSON.JWrapper.Target.Block=Block
 JSON.JWrapper.Target.Player=Player
@@ -47,6 +39,14 @@ JSON.URL.Wiki=The official mcMMO wiki!
 JSON.SkillUnlockMessage=[[GOLD]][ mcMMO[[YELLOW]] @[[DARK_AQUA]]{0} [[GOLD]]Rank [[DARK_AQUA]]{1}[[GOLD]] Unlocked! ]
 JSON.Hover.Rank=&e&lRank:&r &f{0}
 JSON.Hover.NextRank=&7&oNext upgrade at level {0}
+# for JSON.Hover.Mystery you can add {0} to insert the level required into the name, I don't like how that looks so I'm not doing that atm
+JSON.Hover.Mystery=[[GRAY]]???
+JSON.Hover.Mystery2=[[YELLOW]][[[DARK_GRAY]]{0}[[YELLOW]]][[DARK_GRAY]]???&r
+JSON.Hover.SkillName=[[DARK_AQUA]]{0}&r
+JSON.Hover.SuperAbility=[[DARK_PURPLE]]{0}&r
+JSON.Hover.MaxRankSkillName=[[GOLD]]{0}&r
+JSON.Hover.AtSymbolSkills=[[YELLOW]]@
+JSON.Hover.AtSymbolURL=[[YELLOW]]@
 
 #This is the message sent to players when an ability is activated
 JSON.Notification.SuperAbility={0}
